--- a/todo-app-ui/src/app/sidebar/sidebar.component.html
+++ b/todo-app-ui/src/app/sidebar/sidebar.component.html
@@ -7,7 +7,7 @@
         <a class="nav-link " href="#" >Todos</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " href="#" >Utilisateurs</a>
+        <a class="nav-link " href="#" ></a>
       </li>
     </ul>
   </nav>
