--- a/todo-app-ui/src/app/app.component.css
+++ b/todo-app-ui/src/app/app.component.css
@@ -1,5 +1,41 @@
-/* Pour faire de la marge a la page en haut et a gauche  pour que l'écriture ne soit pas collée*/
+/* Pour avoir une marge de page en haut et a gauche  pour que l'écriture ne soit pas collée*/
 .body{
     padding-top: 15px;
     padding-left: 15px;
   }
+  .container{
+    display: grid;
+    grid-template-columns: 50% auto;
+    }
+    
+    .col{
+        padding: .4em 1.3em;
+    }
+    
+    .color-dark{
+        background: #2882c4;
+    
+    }
+    
+    .color-light{
+        background: #57B3F1;
+    
+    }
+    
+    input.txt{
+        border: 0;
+        padding: 1em;
+        width: 80%;
+        margin-bottom: 2em;
+    }
+    
+    input.btn{
+        border: 0;
+        display: block;
+        padding: 1em 3em;
+        background: #A5F883;
+        color: #003A61;
+        margin-bottom: 1em;
+        cursor: pointer;
+        
+    }
