--- a/todo-app-ui/src/app/sidebar/sidebar.component.html
+++ b/todo-app-ui/src/app/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <nav class="hidden-xs-down bg-faded sidebar">
     <ul class="nav nav-pills flex-column">
       <li class="nav-item">
-        <a class="nav-link active" href="#">Overview </a>
+        <a class="nav-link active" href="#">Dashboard</a>
       </li>
       <li class="nav-item">
         <a class="nav-link " href="#" >Todos</a>
