ajouter le module routing

--- a/todo-app-ui/src/app/content/content.component.html
+++ b/todo-app-ui/src/app/content/content.component.html
@@ -1,4 +1,5 @@
+<!--Acts as a placeholder that Angular dynamically fills based on the current router state.
+    A router outlet will emit an activate event any time a new component is being instantiated, 
+    and a deactivate event when it is being destroyed. -->
 
-<h3>My static todos list!</h3>  
-
-<app-todo></app-todo>
+<router-outlet></router-outlet>
